crates/toml/tests/snapshots/invalid/ext/keys/no-eol-2.stderr
TOML parse error at line 1, column 5
  |
1 | 0=""o=""m=""r=""00="0"q="""0"""e="""0"""
  |     ^
unexpected key or value, expected newline, `#`
